# wit-bindgen

./: Cargo.toml  demo.d.ts  demo.js  main.js  task.wit
crates/gen-guest-csharp/: Cargo.toml
crates/gen-guest-csharp/src/: lib.rs
crates/gen-guest-csharp/tests/: Program.cs  codegen.rs
crates/gen-host-wasmtime-csharp/: Cargo.toml
crates/gen-host-wasmtime-csharp/src/: lib.rs
crates/gen-host-wasmtime-rust/src/: lib.rs
crates/wit-bindgen-demo/: Cargo.toml
tests/runtime/results/: host.rs
